# rust-tests

./: Cargo.toml  README.md  names.txt  places.txt
resources/: animals.txt  challengers.txt  challengers.yaml  colors.txt  creatures.txt  dragon.txt  dragons.yaml  dwarfs.txt  elves.txt  feletaur.txt  humans.txt  items.txt  locations.txt  material.txt  orphans.yaml  places.txt  plants.txt  races.yaml  recursive.txt  regions.yaml  rulligg.txt  timeline.yaml  urunai.txt
src/: .main.rs.swp  aliases.rs  article.rs  articles.rs  attribs.rs  characters.rs  eras.rs  events.rs  features.rs  generator.rs  lib.rs  main.rs  names.rs  races.rs  regions.rs
