[package]
name = "rust-names"
version = "0.1.0"
authors = ["Galen Palmer <palmergs@gmail.com>"]
edition = "2018"

[[bin]]
name = "names"
path = "src/bin/main.rs"

[dependencies]
rand = "*"
clap = "2.33"
lazy_static = "*"
regex = "*"
rust-embed = { version = "5.5.1" }
sorted-vec = "*"
yaml-rust = "0.4"
